<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLightGray"
    >

    <LinearLayout
        android:id="@+id/LinearLayoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/tvOverallAbsence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/overallAbsenceText" />

        <TextView
            android:id="@+id/tvOverallAbsenceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_below="@id/LinearLayoutOne">

        <TextView
            android:id="@+id/tvCoffeeConsumed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/CoffeeConsumedText" />

        <TextView
            android:id="@+id/tvCoffeeConsumedNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_below="@id/LinearLayoutTwo">

        <TextView
            android:id="@+id/tvSpentOnCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/SpentOnCoffeeText" />

        <TextView
            android:id="@+id/tvSpentOnCoffeeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnConcludeSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/btnConcludeSemester"
        android:onClick="onConcluceSemesterClick"/>

</RelativeLayout>